parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WRITE

Grammar

Rule 0     S' -> program
Rule 1     program -> block_statement
Rule 2     semicolon_opt -> epsilon
Rule 3     semicolon_opt -> SEMICOLON
Rule 4     block_statement -> LBRACE statement_decl_list semicolon_opt RBRACE
Rule 5     statement -> expression
Rule 6     statement -> block_statement
Rule 7     statement -> if_then_statement
Rule 8     statement -> while_statement
Rule 9     statement -> read_statement
Rule 10    read_statement -> READ LPAREN lvalue lvalue_list RPAREN
Rule 11    lvalue_list -> lvalue_list COMMA lvalue
Rule 12    lvalue_list -> epsilon
Rule 13    statement_decl_list -> statement_decl_list SEMICOLON statement_decl
Rule 14    statement_decl_list -> statement_decl
Rule 15    statement_decl_list -> epsilon
Rule 16    statement_decl -> statement
Rule 17    statement_decl -> decl
Rule 18    decl -> ID COLON type Initiation
Rule 19    Initiation -> EQUALS expression
Rule 20    Initiation -> epsilon
Rule 21    if_then_statement -> IF expression block_statement
Rule 22    if_then_statement -> IF expression block_statement ELSE block_statement
Rule 23    while_statement -> WHILE expression block_statement
Rule 24    identifier -> ID
Rule 25    type -> INT
Rule 26    expression -> PLUS expression
Rule 27    expression -> MINUS expression
Rule 28    expression -> NOT expression
Rule 29    expression -> expression PLUS expression
Rule 30    expression -> expression MINUS expression
Rule 31    expression -> expression EXPONENT expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> expression MODULUS expression
Rule 35    expression -> expression LESS expression
Rule 36    expression -> expression LESS_EQ expression
Rule 37    expression -> expression GREATER expression
Rule 38    expression -> expression GREATER_EQ expression
Rule 39    expression -> expression IS_EQ expression
Rule 40    expression -> expression NOT_EQ expression
Rule 41    expression -> expression AND expression
Rule 42    expression -> expression OR expression
Rule 43    expression -> lvalue EQUALS expression
Rule 44    expression -> LPAREN expression RPAREN
Rule 45    expression -> INT_LITERAL
Rule 46    expression -> STRING_LITERAL
Rule 47    lvalue -> identifier
Rule 48    expression -> lvalue
Rule 49    epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 41
COLON                : 18
COMMA                : 11
DIVIDE               : 33
ELSE                 : 22
EQUALS               : 19 43
EXPONENT             : 31
GREATER              : 37
GREATER_EQ           : 38
ID                   : 18 24
IF                   : 21 22
INT                  : 25
INT_LITERAL          : 45
IS_EQ                : 39
LBRACE               : 4
LESS                 : 35
LESS_EQ              : 36
LPAREN               : 10 44
MINUS                : 27 30
MODULUS              : 34
NOT                  : 28
NOT_EQ               : 40
OR                   : 42
PLUS                 : 26 29
RBRACE               : 4
READ                 : 10
RPAREN               : 10 44
SEMICOLON            : 3 13
STRING_LITERAL       : 46
TIMES                : 32
WHILE                : 23
WRITE                : 
error                : 

Nonterminals, with rules where they appear

Initiation           : 18
block_statement      : 1 6 21 22 22 23
decl                 : 17
epsilon              : 2 12 15 20
expression           : 5 19 21 22 23 26 27 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44
identifier           : 47
if_then_statement    : 7
lvalue               : 10 11 43 48
lvalue_list          : 10 11
program              : 0
read_statement       : 9
semicolon_opt        : 4
statement            : 16
statement_decl       : 13 14
statement_decl_list  : 4 13
type                 : 18
while_statement      : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block_statement
    (4) block_statement -> . LBRACE statement_decl_list semicolon_opt RBRACE

    LBRACE          shift and go to state 3

    program                        shift and go to state 1
    block_statement                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block_statement .

    $end            reduce using rule 1 (program -> block_statement .)


state 3

    (4) block_statement -> LBRACE . statement_decl_list semicolon_opt RBRACE
    (13) statement_decl_list -> . statement_decl_list SEMICOLON statement_decl
    (14) statement_decl_list -> . statement_decl
    (15) statement_decl_list -> . epsilon
    (16) statement_decl -> . statement
    (17) statement_decl -> . decl
    (49) epsilon -> .
    (5) statement -> . expression
    (6) statement -> . block_statement
    (7) statement -> . if_then_statement
    (8) statement -> . while_statement
    (9) statement -> . read_statement
    (18) decl -> . ID COLON type Initiation
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (4) block_statement -> . LBRACE statement_decl_list semicolon_opt RBRACE
    (21) if_then_statement -> . IF expression block_statement
    (22) if_then_statement -> . IF expression block_statement ELSE block_statement
    (23) while_statement -> . WHILE expression block_statement
    (10) read_statement -> . READ LPAREN lvalue lvalue_list RPAREN
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    SEMICOLON       reduce using rule 49 (epsilon -> .)
    RBRACE          reduce using rule 49 (epsilon -> .)
    ID              shift and go to state 14
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    LBRACE          shift and go to state 3
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    READ            shift and go to state 24

    statement_decl_list            shift and go to state 4
    statement_decl                 shift and go to state 5
    epsilon                        shift and go to state 6
    statement                      shift and go to state 7
    decl                           shift and go to state 8
    expression                     shift and go to state 9
    block_statement                shift and go to state 10
    if_then_statement              shift and go to state 11
    while_statement                shift and go to state 12
    read_statement                 shift and go to state 13
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 4

    (4) block_statement -> LBRACE statement_decl_list . semicolon_opt RBRACE
    (13) statement_decl_list -> statement_decl_list . SEMICOLON statement_decl
    (2) semicolon_opt -> . epsilon
    (3) semicolon_opt -> . SEMICOLON
    (49) epsilon -> .

    SEMICOLON       shift and go to state 27
    RBRACE          reduce using rule 49 (epsilon -> .)

    semicolon_opt                  shift and go to state 26
    epsilon                        shift and go to state 28

state 5

    (14) statement_decl_list -> statement_decl .

    SEMICOLON       reduce using rule 14 (statement_decl_list -> statement_decl .)
    RBRACE          reduce using rule 14 (statement_decl_list -> statement_decl .)


state 6

    (15) statement_decl_list -> epsilon .

    SEMICOLON       reduce using rule 15 (statement_decl_list -> epsilon .)
    RBRACE          reduce using rule 15 (statement_decl_list -> epsilon .)


state 7

    (16) statement_decl -> statement .

    SEMICOLON       reduce using rule 16 (statement_decl -> statement .)
    RBRACE          reduce using rule 16 (statement_decl -> statement .)


state 8

    (17) statement_decl -> decl .

    SEMICOLON       reduce using rule 17 (statement_decl -> decl .)
    RBRACE          reduce using rule 17 (statement_decl -> decl .)


state 9

    (5) statement -> expression .
    (29) expression -> expression . PLUS expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . EXPONENT expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression
    (34) expression -> expression . MODULUS expression
    (35) expression -> expression . LESS expression
    (36) expression -> expression . LESS_EQ expression
    (37) expression -> expression . GREATER expression
    (38) expression -> expression . GREATER_EQ expression
    (39) expression -> expression . IS_EQ expression
    (40) expression -> expression . NOT_EQ expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . OR expression

    SEMICOLON       reduce using rule 5 (statement -> expression .)
    RBRACE          reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    EXPONENT        shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33
    MODULUS         shift and go to state 34
    LESS            shift and go to state 35
    LESS_EQ         shift and go to state 36
    GREATER         shift and go to state 37
    GREATER_EQ      shift and go to state 38
    IS_EQ           shift and go to state 39
    NOT_EQ          shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42


state 10

    (6) statement -> block_statement .

    SEMICOLON       reduce using rule 6 (statement -> block_statement .)
    RBRACE          reduce using rule 6 (statement -> block_statement .)


state 11

    (7) statement -> if_then_statement .

    SEMICOLON       reduce using rule 7 (statement -> if_then_statement .)
    RBRACE          reduce using rule 7 (statement -> if_then_statement .)


state 12

    (8) statement -> while_statement .

    SEMICOLON       reduce using rule 8 (statement -> while_statement .)
    RBRACE          reduce using rule 8 (statement -> while_statement .)


state 13

    (9) statement -> read_statement .

    SEMICOLON       reduce using rule 9 (statement -> read_statement .)
    RBRACE          reduce using rule 9 (statement -> read_statement .)


state 14

    (18) decl -> ID . COLON type Initiation
    (24) identifier -> ID .

    COLON           shift and go to state 43
    EQUALS          reduce using rule 24 (identifier -> ID .)
    PLUS            reduce using rule 24 (identifier -> ID .)
    MINUS           reduce using rule 24 (identifier -> ID .)
    EXPONENT        reduce using rule 24 (identifier -> ID .)
    TIMES           reduce using rule 24 (identifier -> ID .)
    DIVIDE          reduce using rule 24 (identifier -> ID .)
    MODULUS         reduce using rule 24 (identifier -> ID .)
    LESS            reduce using rule 24 (identifier -> ID .)
    LESS_EQ         reduce using rule 24 (identifier -> ID .)
    GREATER         reduce using rule 24 (identifier -> ID .)
    GREATER_EQ      reduce using rule 24 (identifier -> ID .)
    IS_EQ           reduce using rule 24 (identifier -> ID .)
    NOT_EQ          reduce using rule 24 (identifier -> ID .)
    AND             reduce using rule 24 (identifier -> ID .)
    OR              reduce using rule 24 (identifier -> ID .)
    SEMICOLON       reduce using rule 24 (identifier -> ID .)
    RBRACE          reduce using rule 24 (identifier -> ID .)


state 15

    (26) expression -> PLUS . expression
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 44
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 16

    (27) expression -> MINUS . expression
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 46
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 17

    (28) expression -> NOT . expression
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 47
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 18

    (43) expression -> lvalue . EQUALS expression
    (48) expression -> lvalue .

    EQUALS          shift and go to state 48
    PLUS            reduce using rule 48 (expression -> lvalue .)
    MINUS           reduce using rule 48 (expression -> lvalue .)
    EXPONENT        reduce using rule 48 (expression -> lvalue .)
    TIMES           reduce using rule 48 (expression -> lvalue .)
    DIVIDE          reduce using rule 48 (expression -> lvalue .)
    MODULUS         reduce using rule 48 (expression -> lvalue .)
    LESS            reduce using rule 48 (expression -> lvalue .)
    LESS_EQ         reduce using rule 48 (expression -> lvalue .)
    GREATER         reduce using rule 48 (expression -> lvalue .)
    GREATER_EQ      reduce using rule 48 (expression -> lvalue .)
    IS_EQ           reduce using rule 48 (expression -> lvalue .)
    NOT_EQ          reduce using rule 48 (expression -> lvalue .)
    AND             reduce using rule 48 (expression -> lvalue .)
    OR              reduce using rule 48 (expression -> lvalue .)
    SEMICOLON       reduce using rule 48 (expression -> lvalue .)
    RBRACE          reduce using rule 48 (expression -> lvalue .)
    RPAREN          reduce using rule 48 (expression -> lvalue .)
    LBRACE          reduce using rule 48 (expression -> lvalue .)


state 19

    (44) expression -> LPAREN . expression RPAREN
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 49
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 20

    (45) expression -> INT_LITERAL .

    PLUS            reduce using rule 45 (expression -> INT_LITERAL .)
    MINUS           reduce using rule 45 (expression -> INT_LITERAL .)
    EXPONENT        reduce using rule 45 (expression -> INT_LITERAL .)
    TIMES           reduce using rule 45 (expression -> INT_LITERAL .)
    DIVIDE          reduce using rule 45 (expression -> INT_LITERAL .)
    MODULUS         reduce using rule 45 (expression -> INT_LITERAL .)
    LESS            reduce using rule 45 (expression -> INT_LITERAL .)
    LESS_EQ         reduce using rule 45 (expression -> INT_LITERAL .)
    GREATER         reduce using rule 45 (expression -> INT_LITERAL .)
    GREATER_EQ      reduce using rule 45 (expression -> INT_LITERAL .)
    IS_EQ           reduce using rule 45 (expression -> INT_LITERAL .)
    NOT_EQ          reduce using rule 45 (expression -> INT_LITERAL .)
    AND             reduce using rule 45 (expression -> INT_LITERAL .)
    OR              reduce using rule 45 (expression -> INT_LITERAL .)
    SEMICOLON       reduce using rule 45 (expression -> INT_LITERAL .)
    RBRACE          reduce using rule 45 (expression -> INT_LITERAL .)
    RPAREN          reduce using rule 45 (expression -> INT_LITERAL .)
    LBRACE          reduce using rule 45 (expression -> INT_LITERAL .)


state 21

    (46) expression -> STRING_LITERAL .

    PLUS            reduce using rule 46 (expression -> STRING_LITERAL .)
    MINUS           reduce using rule 46 (expression -> STRING_LITERAL .)
    EXPONENT        reduce using rule 46 (expression -> STRING_LITERAL .)
    TIMES           reduce using rule 46 (expression -> STRING_LITERAL .)
    DIVIDE          reduce using rule 46 (expression -> STRING_LITERAL .)
    MODULUS         reduce using rule 46 (expression -> STRING_LITERAL .)
    LESS            reduce using rule 46 (expression -> STRING_LITERAL .)
    LESS_EQ         reduce using rule 46 (expression -> STRING_LITERAL .)
    GREATER         reduce using rule 46 (expression -> STRING_LITERAL .)
    GREATER_EQ      reduce using rule 46 (expression -> STRING_LITERAL .)
    IS_EQ           reduce using rule 46 (expression -> STRING_LITERAL .)
    NOT_EQ          reduce using rule 46 (expression -> STRING_LITERAL .)
    AND             reduce using rule 46 (expression -> STRING_LITERAL .)
    OR              reduce using rule 46 (expression -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 46 (expression -> STRING_LITERAL .)
    RBRACE          reduce using rule 46 (expression -> STRING_LITERAL .)
    RPAREN          reduce using rule 46 (expression -> STRING_LITERAL .)
    LBRACE          reduce using rule 46 (expression -> STRING_LITERAL .)


state 22

    (21) if_then_statement -> IF . expression block_statement
    (22) if_then_statement -> IF . expression block_statement ELSE block_statement
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 50
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 23

    (23) while_statement -> WHILE . expression block_statement
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 51
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 24

    (10) read_statement -> READ . LPAREN lvalue lvalue_list RPAREN

    LPAREN          shift and go to state 52


state 25

    (47) lvalue -> identifier .

    EQUALS          reduce using rule 47 (lvalue -> identifier .)
    PLUS            reduce using rule 47 (lvalue -> identifier .)
    MINUS           reduce using rule 47 (lvalue -> identifier .)
    EXPONENT        reduce using rule 47 (lvalue -> identifier .)
    TIMES           reduce using rule 47 (lvalue -> identifier .)
    DIVIDE          reduce using rule 47 (lvalue -> identifier .)
    MODULUS         reduce using rule 47 (lvalue -> identifier .)
    LESS            reduce using rule 47 (lvalue -> identifier .)
    LESS_EQ         reduce using rule 47 (lvalue -> identifier .)
    GREATER         reduce using rule 47 (lvalue -> identifier .)
    GREATER_EQ      reduce using rule 47 (lvalue -> identifier .)
    IS_EQ           reduce using rule 47 (lvalue -> identifier .)
    NOT_EQ          reduce using rule 47 (lvalue -> identifier .)
    AND             reduce using rule 47 (lvalue -> identifier .)
    OR              reduce using rule 47 (lvalue -> identifier .)
    SEMICOLON       reduce using rule 47 (lvalue -> identifier .)
    RBRACE          reduce using rule 47 (lvalue -> identifier .)
    RPAREN          reduce using rule 47 (lvalue -> identifier .)
    LBRACE          reduce using rule 47 (lvalue -> identifier .)
    COMMA           reduce using rule 47 (lvalue -> identifier .)


state 26

    (4) block_statement -> LBRACE statement_decl_list semicolon_opt . RBRACE

    RBRACE          shift and go to state 53


state 27

    (13) statement_decl_list -> statement_decl_list SEMICOLON . statement_decl
    (3) semicolon_opt -> SEMICOLON .
    (16) statement_decl -> . statement
    (17) statement_decl -> . decl
    (5) statement -> . expression
    (6) statement -> . block_statement
    (7) statement -> . if_then_statement
    (8) statement -> . while_statement
    (9) statement -> . read_statement
    (18) decl -> . ID COLON type Initiation
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (4) block_statement -> . LBRACE statement_decl_list semicolon_opt RBRACE
    (21) if_then_statement -> . IF expression block_statement
    (22) if_then_statement -> . IF expression block_statement ELSE block_statement
    (23) while_statement -> . WHILE expression block_statement
    (10) read_statement -> . READ LPAREN lvalue lvalue_list RPAREN
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    RBRACE          reduce using rule 3 (semicolon_opt -> SEMICOLON .)
    ID              shift and go to state 14
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    LBRACE          shift and go to state 3
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    READ            shift and go to state 24

    statement_decl                 shift and go to state 54
    statement                      shift and go to state 7
    decl                           shift and go to state 8
    expression                     shift and go to state 9
    block_statement                shift and go to state 10
    if_then_statement              shift and go to state 11
    while_statement                shift and go to state 12
    read_statement                 shift and go to state 13
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 28

    (2) semicolon_opt -> epsilon .

    RBRACE          reduce using rule 2 (semicolon_opt -> epsilon .)


state 29

    (29) expression -> expression PLUS . expression
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 55
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 30

    (30) expression -> expression MINUS . expression
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 56
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 31

    (31) expression -> expression EXPONENT . expression
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 57
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 32

    (32) expression -> expression TIMES . expression
    (26) expression -> . PLUS expression
    (27) expression -> . MINUS expression
    (28) expression -> . NOT expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression EXPONENT expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . expression MODULUS expression
    (35) expression -> . expression LESS expression
    (36) expression -> . expression LESS_EQ expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQ expression
    (39) expression -> . expression IS_EQ expression
    (40) expression -> . expression NOT_EQ expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . lvalue EQUALS expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . INT_LITERAL
    (46) expression -> . STRING_LITERAL
    (48) expression -> . lvalue
    (47) lvalue -> . identifier
    (24) identifier -> . ID

    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    NOT             shift and go to state 17
    LPAREN          shift and go to state 19
    INT_LITERAL     shift and go to state 20
    STRING_LITERAL  shift and go to state 21
    ID              shift and go to state 45

    expression                     shift and go to state 58
    lvalue                         shift and go to state 18
    identifier                     shift and go to state 25

state 33
